make sure caption is readable

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
@@ -78,8 +78,8 @@
             }
 
             .content-card-caption {
-                font-size: 0.60em;
-                color: lightgray;
+                font-size: 0.70em;
+                color: gray;
             }
         }
 
